[package]
name = "twilight-bucket"
description = "Wait n seconds before running this again"
authors = ["laralove"]
license = "MIT"
repository = "https://github.com/laralove143/twilight-bucket"
readme = "README.md"
categories = ["caching"]
keywords = ["twilight", "discord", "discord-api", "bucket"]
version = "0.2.2"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.17", default-features = false, features = ["rt-multi-thread", "macros", "time"] }

[dependencies]
dashmap = "5.2"